
add_library(Cht_lib src/Cht.cpp)
add_library(Cht_util_lib src/chmtsp_util.cpp)
add_library(MTSPBC_lib src/MTSPBC.cpp)
add_library(MTSPBC_chh_lib src/MTSPBC_chh.cpp src/MTSPBC_util.cpp)

target_include_directories(Cht_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(Cht_util_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(MTSPBC_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(MTSPBC_chh_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

if(BUILD_TESTING)
    add_executable(test_Cht_class src/test_Cht_class.cpp)
    add_executable(test_MTSPBC_class src/test_MTSPBC_class.cpp)
    target_link_libraries(test_Cht_class PRIVATE Cht_lib Cht_util_lib MTSPBC_chh_lib GTest::gtest_main)
    target_link_libraries(test_MTSPBC_class PRIVATE MTSPBC_lib MTSPBC_chh_lib Cht_util_lib Cht_lib GTest::gtest_main)
    include(GoogleTest)
    gtest_discover_tests(test_Cht_class)
    gtest_discover_tests(test_MTSPBC_class)
endif()
